[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit5G"
version = "R23a.0.6"
authors = [
  { name="Gigayasa", email="vikram@gigayasa.com" },
]
description = "A Toolkit package written in python for 5G NR"
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "matplotlib",
  "ipympl",
  "sionna",
]

[project.urls]
"Homepage" = "https://gigayasawireless.github.io/5GToolkit/index.html"
"Bug Tracker" = "https://github.com/pypa/5GToolkit/issues"
