[egg_info]
tag_build = 
tag_date = 0

[metadata]
name = toolkit5G
version = R23a.0.7
author = Gigayasa Wireless 5G Simulator Team
author_email = vikram@gigayasa.com
description = 5G Toolkit -- A 3GPP release-17 standards compliant NumPy based library for link and system level simulation in Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = Proprietary
url = https://gigayasawireless.github.io/toolkit5G/
download_url = https://github.com/GigayasaWireless/toolkit5G/releases
project_urls = Bug Tracker = https://github.com/GigayasaWireless/toolkit5G/issues
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    Operating System :: OS Independent
    License :: OSI Approved :: Proprietary

[options]
package_dir == .
packages = find:
include_package_data = True
python_requires = >=3.6

install_requires =
    numpy
    matplotlib
    scipy
    sionna
    

[options.package_data]
* = *.csv, *.npy, *.json
